@@ -4,257 +4,158 @@ The following sections analyze the results of WSO2 API Manager performance tests
 
 ## Summary
 
-During each release, WSO2 executes various automated performance test scenarios and publishes the results.
+The performance of WSO2 API Manager was measured using the following APIs, which invoke a simple “Netty HTTP Echo Service.” As the name suggests, the Netty service echoes back any request posted to the service.
 
-| **Test Scenarios** | **Description**                                                      |
-|------------------|--------------------------------------------------------------------------|
-| Passthrough      |   A secured API, which directly invokes the back\-end service\.          |
-| Transformation   |   A secured API, which has a mediation extension to modify the message\. |
- 
+- Echo API: This is a secured API, which directly invokes the back-end service.
+- Mediation API: This is also a secured API, which has a “sequence” as a mediation extension to modify the message.
 
-WSO2 uses [Apache JMeter](https://jmeter.apache.org/index.html) as the test client. WSO2 tests each scenario for a fixed duration of time. Thereafter, WSO2 splits the test results into warmup and measurement parts and uses the measurement part to compute the performance metrics.
+Tests were done using 100, 200, 300, 1000, and 2000 concurrent users. Concurrent Users mean that it consists of multiple users accessing the API Gateway at the same time. Different Message Sizes (Payloads) were used for the tests with different back-end service delays. The message sizes used are 50B, 1KiB, 10KiB, and 100KiB. The back-end delay was 0ms.
+Two key performance metrics were used to measure the performance of each test. 
 
-Test scenarios use a [Netty](https://netty.io/) based back-end service which echoes back any request posted to it after a specified period of time.
+- Throughput: This measures the number of API invocations that the API Manager Gateway server processed during a specific time interval (e.g., per second). 
+- Response Time: This measures end-to-end processing time for an operation (of invoking an API using HTTPS protocol). The complete distribution of response times was recorded.
 
-WSO2 runs the performance tests with different concurrent user loads, message sizes (payloads), and back-end service delays.
+## Deployment used for the test
 
-The main performance metrics:
-
-- **Throughput**: The number of requests that the WSO2 API Manager processes during a specific time interval (e.g. per second).
-- **Response Time**: The end-to-end latency for an operation of invoking an API. The complete distribution of response times was recorded.
-
-In addition to the above metrics, WSO2 measures the load average and several memory-related metrics.
-
-The duration of each test is 900 seconds. The warm-up period is 300 seconds. The measurement results are collected after the warm-up period.
-
-A [c5.large Amazon EC2 instance](https://aws.amazon.com/ec2/instance-types/) was used to install WSO2 API Manager.
-
-## Test parameters
-<table>
-  <tr>
-   <th><strong>Test Parameter</strong>
-   </th>
-   <th><strong>Description</strong>
-   </th>
-   <th><strong>Values</strong>
-   </th>
-  </tr>
-  <tr>
-   <td>Scenario Name
-   </td>
-   <td>The name of the test scenario.
-   </td>
-   <td> - 
-   </td>
-  </tr>
-  <tr>
-   <td>Heap Size
-   </td>
-   <td>The amount of memory allocated to the application
-   </td>
-   <td>2G
-   </td>
-  </tr>
-  <tr>
-   <td>Concurrent Users
-   </td>
-   <td>The number of users accessing the application at the same time.
-   </td>
-   <td>50, 100, 200, 300, 500, 1000
-   </td>
-  </tr>
-  <tr>
-   <td>Message Size (Bytes)
-   </td>
-   <td>The request payload size in Bytes.
-   </td>
-   <td>50, 1024, 10240, 102400
-   </td>
-  </tr>
-  <tr>
-   <td>Back-end Delay (ms)
-   </td>
-   <td>The delay added by the back-end service.
-   </td>
-   <td>0
-   </td>
-  </tr>
-</table>
-
-## Measurements collected
-The following are the measurements collected from each performance test conducted for a given combination of test parameters.
+[![API-M performance test all-in-one deployment]({{base_path}}/assets/img/setup-and-install/performance-test-results/apim_performance_test_all_in_one_deployment.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/apim_performance_test_all_in_one_deployment.png)
 
 <table>
+<thead>
   <tr>
-   <th><strong>Measurement</strong>
-   </th>
-   <th><strong>Description</strong>
-   </th>
+    <th>Name</th>
+    <th>EC2 Instance Type</th>
+    <th>vCPU</th>
+    <th>Mem(GiB)</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>Apache JMeter Client</td>
+    <td>c5.large</td>
+    <td>2</td>
+    <td>2</td>
   </tr>
   <tr>
-   <td>Error %
-   </td>
-   <td>The percentage of requests with errors.
-   </td>
+    <td>Apache JMeter Server 01</td>
+    <td>c5.xlarge</td>
+    <td>4</td>
+    <td>4</td>
   </tr>
   <tr>
-   <td>Average Response Time (ms)
-   </td>
-   <td>The average response time of a set of results.
-   </td>
+    <td>Apache JMeter Server 02</td>
+    <td>c5.xlarge</td>
+    <td>4</td>
+    <td>4</td>
   </tr>
   <tr>
-   <td>Standard Deviation of Response Time (ms)
-   </td>
-   <td>The “Standard Deviation” of the response time.
-   </td>
+    <td>MySQL</td>
+    <td>db.m5.large</td>
+    <td>2</td>
+    <td>8</td>
   </tr>
   <tr>
-   <td>99th Percentile of Response Time (ms)
-   </td>
-   <td>99% of the requests took no more than this time. The remaining samples took at least as long as this.
-   </td>
+    <td>Netty HTTP Backend</td>
+    <td>c5.xlarge</td>
+    <td>4</td>
+    <td>4</td>
   </tr>
   <tr>
-   <td>Throughput (Requests/sec)
-   </td>
-   <td>The throughput is measured in requests per second.
-   </td>
+    <td>WSO2 API Manager</td>
+    <td>c5.large</td>
+    <td>2</td>
+    <td>2</td>
   </tr>
-  <tr>
-   <td>Average Memory Footprint After Full GC (M)
-   </td>
-   <td>The average memory consumed by the application after a full garbage collection event.
-   </td>
-  </tr>
+</tbody>
 </table>
 
-For a detailed analysis of the performance of API-M 3.2.0, see [API-M 3.2.0 Performance graphs on Github](https://github.com/wso2/performance-apim/tree/performance-test-276-2020-08-03_08-47-25/performance/benchmarks/3.2.0%20graphs-all).
+- Token type: JWT
+- The operating system is Ubuntu 18.04
+- MySQL version in RDS instance is 5.7
+- Java version is JDK 11
 
-## Observations from all results
+### Performance test scripts
 
-There are key observations for the average user scenario of accessing APIs with 1KiB messages and the back-end service having 30ms delay.
+All scripts used to run the performance tests and analyze results are in the following repositories.
 
-The following are the key observations from the all performance tests done with different message sizes and different backend delays. (See **Comparison of results** for all charts used to derive the pointed mentioned below)
+- [https://github.com/wso2/performance-common](https://github.com/wso2/performance-common)
 
-#### Throughput comparison:
+- [https://github.com/wso2/performance-apim](https://github.com/wso2/performance-apim)
 
-A throughput increase is observed in the transformation scenario in API-M 3.2.0, in comparison to API-M 3.1.0
+## Results
 
-The throughput increases up to a certain limit when the number of concurrent users increases. The Mediation API throughput increase rate is much lower than the Echo API. Throughput decreases when the message sizes increase. Throughput decreases when the backend sleep time increase. This observation is similar to both APIs. This means that if the backend takes more time, the request processing rate at the API Manager Gateway will be less.
+Considering the fact that an average WSO2 API Manager user uses ~1KiB messages, the performance test highlights for that scenario are represented in the charts below. The complete results can be found [here](https://github.com/wso2/performance-apim/blob/performance-test-276-2020-08-03_08-47-25/performance/benchmarks/summary.md).
 
-#### Key observations related to response time:
+The following graph depicts the throughput changes based on the number of concurrent users.
 
-The average response time increases when the number of concurrent users increases. The increasing rate of average response time for both API-M 3.2.0 and API-M 3.1.0 is similar.
+[![lineplot throughput 2G 1KiB 0ms]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-throughput-2g-1kib-0ms.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-throughput-2g-1kib-0ms.png)
 
-The average response time increases when the number of concurrent users increases. The average response time increases considerably for Mediation API when the message sizes increase due to the message processing. The average response time of the Echo API does not increase as much as the Mediation API. The average response time increases when the backend sleep time increases. This observation is similar to both APIs.
+**Key observations:**
 
-#### Key observations related to GC throughput:
+- More concurrent users mean more requests to the API Manager Gateway. Therefore, the throughput of the API Manager Gateway increases as the number of concurrent users accessing the APIs increases. The maximum throughput is obtained for 100 concurrent users for both “Echo API” and “Mediation API,” and the throughput degrades slightly after 100 concurrent users due to resource contentions in the system. The degradation point mainly depends on hardware resources.
 
-The GC throughput decreases when the number of concurrent users increases. When there are more concurrent users, the object allocation rate increases. The GC throughput increases when the message size increases. The request processing rate slows down due to the time taken to process large messages. Therefore, the object allocation rate decreases  when the message size increases. The GC throughput increases when the backend sleep time increases. The object allocation rate will be low when the backend takes more time to respond.
+- Echo API throughput is much better than the Mediation API. The main reason is that the Mediation API has a mediation extension, which uses a “Payload Factory” Mediator. This mediation in the sequence does a JSON to JSON message transformation. That means the Mediation API reads the message (payload) to do the message transformation, and it has a considerable overhead than the “Echo API,” which is similar to a “Direct Proxy.” A “Direct Proxy” does not perform any processing on the messages that pass through it.
 
-## Comparison of 3.1.0 and 3.2.0
+The following graph depicts the average response time changes based on the number of concurrent users.
 
-### Average response time comparison
+[![lineplot average response time 2G 1KiB 0ms]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-average-response-time-2g-1kib-0ms.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-average-response-time-2g-1kib-0ms.png)
 
-#### Average response time vs concurrent users
+**Key observations:**
 
-  [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/average_time_0ms_50b.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/average_time_0ms_50b.png)
-  [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/average_time_0ms_1kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/average_time_0ms_1kib.png)
-  [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/average_time_0ms_10kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/average_time_0ms_10kib.png)
+- The average response time increases with the number of concurrent users. As the number of requests to serve increases with more users, there are more resource contentions. Therefore, the number of concurrent users served by the API Gateway needs to be decided on the required response time limits. Again, the average response time also varies as the hardware resources changes. For example, a user can achieve a lower response time if the number of CPUs allocated is increased.
 
-### GC Throughput comparison 
+- The mediation API response times are higher than Echo API due to the performance overhead of the mediation extension.
+Let’s look at the 90th, 95th, and 99th response time percentiles. This is useful to measure the percentage of requests that exceeded the response time value for a given percentile. A percentile can be used to determine the percentage of requests completed below the particular response time value.
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/gc_throughput_0ms_1kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/gc_throughput_0ms_1kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/gc_throughput_0ms_10kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/gc_throughput_0ms_10kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/gc_throughput_0ms_100kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/gc_throughput_0ms_100kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/gc_throughput_0ms_50b.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/gc_throughput_0ms_50b.png)
+For example, when there are 100 concurrent users, the 90th response time percentile for Echo API is 52ms. This means that 10% of the requests have taken more than 73ms to respond. Similarly, the 99th response time percentile for Echo API is 150ms, which means that 99% of the requests have been completed within 150ms.
 
-#### GC throughput vs concurrent users
+The figure below represents the percentile values for Echo API (Passthrough Scenario).
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/comparison_gc.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/comparison_gc.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_concurrent_users.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_concurrent_users.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_concurrent_users_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_concurrent_users_with_hue.png)
+[![Response time 0ms 1KiB]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_1kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_1kib.png)
 
-#### GC throughput with 0ms backend delay
+**Key observations:**
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/comparison_gc_0ms.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/comparison_gc_0ms.png)
+- The Mediation API is slower than the Echo API due to the performance overhead of the mediation extension.
 
-#### GC throughput vs message size
+- Response Times percentiles are less than 400ms up to 300 concurrent users for both APIs.
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_message_size.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_message_size.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_message_size_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_message_size_with_hue.png)
+!!! note
+    1000 concurrent users mean a lot, and it is not very common. It is recommended to scale horizontally or vertically to support more concurrent users with acceptable response times. When scaling horizontally, two or more Gateway nodes need to be used with a load balancer. Another load test must be carried out to measure the performance after scaling.
 
-#### GC throughput vs sleep time
+In order to see the memory usage, the Garbage Collection (GC) logs in the API Manager were enabled using the following flags.
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_sleep_time.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_sleep_time.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_sleep_time_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_gc_throughput_vs_sleep_time_with_hue.png)
+```
+-XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:"$CARBON_HOME/repository/logs/gc.log
+```
 
-### Load average comparison
+In addition, the GC log for each performance test was analyzed using the GCViewer.
+The GC Throughput was calculated for each test to check whether GC operations are not impacting the performance of the server. The GC Throughput is the time percentage of the application, which was not busy with GC operations. For example, if the application ran for 10 minutes and 30 seconds were taken for GC operations, the GC Throughput is 1-301060100=95%. A GC Throughput over 90% is good, and that means the allocated heap was enough to handle all concurrent requests, which allocate objects in the memory. On the contrary, if the GC throughput is a lower value, it indicates that the allocated memory is not enough for API Manager to function efficiently.
 
-#### Load average vs concurrent users
+The following charts depict the GC Throughput (%) based on the number of concurrent users for the passthrough scenario (Echo API).
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_concurrent_users.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_concurrent_users.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_concurrent_users_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_concurrent_users_with_hue.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_concurrent_users.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_concurrent_users.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_concurrent_users_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_concurrent_users_with_hue.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_concurrent_users.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_concurrent_users.png) 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_concurrent_users_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_concurrent_users_with_hue.png)
+[![Lineplot WSO2 API Manager GC throughput 2g 1KiB 0ms]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-wso2-api-manager-gc-throughput-2g-1kib-0ms.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-wso2-api-manager-gc-throughput-2g-1kib-0ms.png)
 
-#### Load average vs message size
+[![Lineplot WSO2 Api Manager GC throughput 2G 10KiB 0ms]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-wso2-api-manager-gc-throughput-2g-10kib-0ms.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-wso2-api-manager-gc-throughput-2g-10kib-0ms.png)
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_message_size.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_message_size.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_message_size_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_message_size_with_hue.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_message_size.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_message_size.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_message_size_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_message_size_with_hue.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_message_size.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_message_size.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_message_size_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_message_size_with_hue.png)
- 
-#### Load average vs sleep time
+[![Lineplot WSO2 Api Manager GC throughput 2G 50B 0ms]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-wso2-api-manager-gc-throughput-2g-50B-0ms.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lineplot-wso2-api-manager-gc-throughput-2g-50B-0ms.png)
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_sleep_time.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_sleep_time.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_sleep_time_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_1_vs_sleep_time_with_hue.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_sleep_time.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_sleep_time.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_sleep_time_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_5_vs_sleep_time_with_hue.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_sleep_time.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_sleep_time.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_sleep_time_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_loadavg_15_vs_sleep_time_with_hue.png)
-
+## Comparison of results
 
 ### Throughput comparison
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/throughput_0ms_100kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/throughput_0ms_100kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/throughput_0ms_10kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/throughput_0ms_10kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/throughput_0ms_1kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/throughput_0ms_1kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/throughput_0ms_50b.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/throughput_0ms_50b.png)
+#### Throughput (requests/sec) vs. concurrent users
 
-#### Throughput vs concurrent users
+[![Lineplot throughput concurrent users 2G]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot-throughput-concurrent-users-2g.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot-throughput-concurrent-users-2g.png)
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_concurrent_users.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_concurrent_users.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_concurrent_users_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_concurrent_users_with_hue.png)
+#### Throughput (requests/sec) vs. message size (Bytes)
 
-#### Throughput vs message size
+[![Lineplot throughput message size 2G]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot-throughput-message-size-2g.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot-throughput-message-size-2g.png)
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_message_size.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_message_size.png) 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_message_size_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_message_size_with_hue.png)
+### Average response time comparison
 
-#### Throughput vs sleep time
+#### Average response time (ms) vs. concurrent users
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_sleep_time.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_sleep_time.png) 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_sleep_time_with_hue.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot_throughput_vs_sleep_time_with_hue.png)
+[![Lineplot average response time concurrent users 2G]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot-average-response-time-concurrent-users-2g.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot-average-response-time-concurrent-users-2g.png)
 
-### Response time comparison
+#### Average response time (ms) vs. message size (Bytes)
 
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_100kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_100kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_10kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_10kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_1kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_1kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_50b.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/response_time_0ms_50b.png)
-
-
-### Percentile comparison
-
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/p90_0ms_10kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/p90_0ms_10kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/p90_0ms_10kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/p90_0ms_10kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/p90_0ms_1kib.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/p90_0ms_1kib.png)
- [![]({{base_path}}/assets/img/setup-and-install/performance-test-results/p90_0ms_50b.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/p90_0ms_50b.png)
-
- For more comparisons, see [the comparison graphs on GitHub](https://github.com/wso2/performance-apim/tree/performance-test-276-2020-08-03_08-47-25/performance/benchmarks/3.2.0%20vs%203.1.0%20comparison)
+[![Lineplot average response time message size 2G]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot-average-response-time-message-size-2g.png)]({{base_path}}/assets/img/setup-and-install/performance-test-results/lmplot-average-response-time-message-size-2g.png)
